--- a/environment.devenv.yml
+++ b/environment.devenv.yml
@@ -14,9 +14,13 @@ dependencies:
   - jupyter_nbextensions_configurator
   - sympy
   - git
-  - pytest
   - pylint
   - pygmo
+
+  # For tests
+  - pytest
+  - hypothesis
+  - nbval
 
 environment:
   PYTHONPATH:
