--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_install:
     else
       echo "Installing miniconda.";
       rm -rf $HOME/miniconda;
-      wget -O miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
-      bash miniconda.sh -b -p $HOME/miniconda
+      wget -O miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh;
+      bash miniconda.sh -b -p $HOME/miniconda;
   - export CONDA_BIN=$HOME/miniconda/bin
   - export CONDA=$CONDA_BIN/conda
   - $CONDA config --system --set always_yes yes --set changeps1 no
