--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,5 @@ install:
   - source $CONDA_BIN/activate gibbs-py$PY_VERSION
 
 script:
-  - pytest --nbval
+  - pytest
+  - cd $GIBBS_NOTEBOOKS_DIR; pytest --nbval
