--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,6 @@ platform:
   - x64
 environment:
   CONDA_DIR: C:\Miniconda36-x64
-  PY_VERSION: 37
 init:
   - set PATH=%CONDA_DIR%;%CONDA_DIR%\Scripts;%CONDA_DIR%\Library\bin;%PATH%
 install:
@@ -15,6 +14,6 @@ install:
   - conda config --system --append channels conda-forge
   - conda install -n base conda-devenv
   - conda devenv
-  - call activate gibbs-py%PY_VERSION%
+  - call activate gibbs-py37
 test_script:
   - pytest --nbval
