--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,22 @@
 version: 1.0.{build}
 image:
 - Visual Studio 2015
-build:
-  parallel: true
+build: false
 platform:
   - x64
+  - x86
+configuration:
+  - Debug
+  - Release
 environment:
   CONDA_DIR: C:\Miniconda36-x64
 init:
-  - set PATH=%CONDA_DIR%;%CONDA_DIR%\Scripts;%CONDA_DIR%\Library\bin;%PATH%
+  - cmd: set PATH=%CONDA_DIR%;%CONDA_DIR%\Scripts;%CONDA_DIR%\Library\bin;%PATH%
 install:
-  - conda config --system --set always_yes yes --set changeps1 no
-  - conda config --system --append channels conda-forge
-  - conda install -n base conda-devenv
-  - conda devenv
-  - call activate gibbs-py37
+  - cmd: conda config --system --set always_yes yes --set changeps1 no
+  - cmd: conda config --system --append channels conda-forge
+  - cmd: conda install -n base conda-devenv
+  - cmd: conda devenv
+  - cmd: activate gibbs-py37
 test_script:
-  - pytest --nbval
+  - cmd: pytest --nbval
