--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,9 +27,10 @@ steps:
     conda config --system --append channels conda-forge
     conda install -n base conda-devenv
     conda devenv
+    source $HOME/miniconda/etc/profile.d/conda.sh
+    conda activate gibbs-py37
   displayName: 'Install dependencies'
 
 - script: |
-    source activate gibbs-py37
     pytest --nbval
   displayName: 'Tests'
