--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,18 @@ steps:
     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
     bash miniconda.sh -b -p $HOME/miniconda
     export PATH="$HOME/miniconda/bin:$PATH"
+  displayName: 'Download and install miniconda'
+
+- script: |
     conda config --system --set always_yes yes --set changeps1 no
     conda config --system --append channels conda-forge
     conda install -n base conda-devenv
     conda devenv
-  displayName: 'Install dependencies'
+  displayName: 'Configurating conda'
+
+- script: |
+    conda devenv
+  displayName: 'Running conda devenv'
 
 - script: |
     conda activate gibbs-py37
