Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,6 @@ steps:
   displayName: 'Running conda devenv'
 
 - script: |
-    conda activate gibbs-py37
+    source activate gibbs-py37
     pytest --nbval
   displayName: 'Tests'
