--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 jobs:
 - job:
   displayName: Ubuntu
@@ -71,5 +66,39 @@ jobs:
 
   - script: |
       source activate gibbs-py37
+      pytest --nbval
+    displayName: 'Tests'
+
+- job:
+  displayName: Windows vs2017
+
+  pool:
+    vmImage: 'vs2017-win2016'
+  strategy:
+    matrix:
+      Python37:
+        python.version: '3.7'
+
+  steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '$(python.version)'
+    displayName: 'Use Python $(python.version)'
+
+  - powershell: Write-Host "##vso[task.prependpath]$env:CONDA\Scripts"
+    displayName: Add conda to PATH
+
+  - script: |
+      conda config --system --set always_yes yes --set changeps1 no
+      conda config --system --append channels conda-forge
+      conda install -n base conda-devenv
+    displayName: 'Configuring conda'
+
+  - script: |
+      conda devenv
+    displayName: 'Running conda devenv'
+
+  - script: |
+      call activate gibbs-py37
       pytest --nbval
     displayName: 'Tests'
