Add try to separate azure jobs in templates

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,106 +8,8 @@ pr:
 - master
 
 jobs:
-- job:
-  displayName: Ubuntu
+- template: .azure-templates/linux.yml
 
-  pool:
-    vmImage: 'ubuntu-latest'
-  strategy:
-    matrix:
-      Python37:
-        python.version: '3.7'
+- template: .azure-templates/osx.yml
 
-  steps:
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '$(python.version)'
-    displayName: 'Use Python $(python.version)'
-
-  - bash: echo "##vso[task.prependpath]$CONDA/bin"
-    displayName: 'Add conda to PATH'
-
-  - script: |
-      conda config --system --set always_yes yes --set changeps1 no
-      conda config --system --append channels conda-forge
-      conda install -n base conda-devenv
-    displayName: 'Configuring conda'
-
-  - script: |
-      conda devenv
-    displayName: 'Running conda devenv'
-
-  - script: |
-      source activate gibbs-py$(py_version)
-      pytest --nbval
-    displayName: 'Tests'
-
-- job:
-  displayName: macOS-10.13
-
-  pool:
-    vmImage: 'macOS-10.13'
-  strategy:
-    matrix:
-      Python37:
-        python.version: '3.7'
-
-  steps:
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '$(python.version)'
-    displayName: 'Use Python $(python.version)'
-
-  - bash: |
-      echo "##vso[task.prependpath]$CONDA/bin"
-      sudo chown -R $USER $CONDA
-    displayName: 'Add conda to PATH'
-
-  - script: |
-      conda config --system --set always_yes yes --set changeps1 no
-      conda config --system --append channels conda-forge
-      conda install -n base conda-devenv
-    displayName: 'Configuring conda'
-
-  - script: |
-      conda devenv
-    displayName: 'Running conda devenv'
-
-  - script: |
-      source activate gibbs-py$(py_version)
-      pytest --nbval
-    displayName: 'Tests'
-
-- job:
-  displayName: Windows vs2017
-
-  pool:
-    vmImage: 'vs2017-win2016'
-  strategy:
-    matrix:
-      Python37:
-        python.version: '3.7'
-
-  steps:
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '$(python.version)'
-    displayName: 'Use Python $(python.version)'
-
-  - powershell: Write-Host "##vso[task.prependpath]$env:CONDA\Scripts"
-    displayName: Add conda to PATH
-
-  - script: |
-      conda config --system --set always_yes yes --set changeps1 no
-      conda config --system --append channels conda-forge
-      conda install -n base conda-devenv
-    displayName: 'Configuring conda'
-
-  - script: |
-      conda devenv
-    displayName: 'Running conda devenv'
-
-  - script: |
-      call activate gibbs-py$(py_version)
-      pytest --nbval
-    displayName: 'Tests'
+- template: .azure-templates/win.yml
