--- a/.azure-templates/win.yml
+++ b/.azure-templates/win.yml
@@ -30,5 +30,7 @@ jobs:
 
   - script: |
       call activate gibbs-py$(py_version)
+      pytest
+      cd $(GIBBS_NOTEBOOKS_DIR)
       pytest --nbval
     displayName: 'Tests'
