--- a/.azure-templates/osx.yml
+++ b/.azure-templates/osx.yml
@@ -32,5 +32,7 @@ jobs:
 
   - script: |
       source activate gibbs-py$(py_version)
+      pytest
+      cd $(GIBBS_NOTEBOOKS_DIR)
       pytest --nbval
     displayName: 'Tests'
