--- a/.azure-templates/osx.yml
+++ b/.azure-templates/osx.yml
@@ -33,6 +33,6 @@ jobs:
   - script: |
       source activate gibbs-py$(py_version)
       pytest
-      cd $(GIBBS_NOTEBOOKS_DIR)
+      cd $GIBBS_NOTEBOOKS_DIR
       pytest --nbval
     displayName: 'Tests'
