--- a/.azure-templates/linux.yml
+++ b/.azure-templates/linux.yml
@@ -30,5 +30,7 @@ jobs:
 
   - script: |
       source activate gibbs-py$(py_version)
+      pytest
+      cd notebooks
       pytest --nbval
     displayName: 'Tests'
