--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,8 @@ install:
   - source $CONDA_BIN/activate gibbs-py$PY_VERSION
 
 script:
-  - pytest
+  - pytest --cov-config=.coveragerc --cov=gibbs
   - cd $GIBBS_NOTEBOOKS_DIR; pytest --nbval
+
+after_script:
+  - codecov
