--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ install:
   - source $CONDA_BIN/activate gibbs-py$PY_VERSION
 
 script:
-  - pytest --cov-config=.coveragerc --cov=gibbs
+  - pytest --cov-config=.coveragerc --cov-report xml --cov=gibbs
   - cd $GIBBS_NOTEBOOKS_DIR; pytest --nbval
 
 after_script:
-  - codecov
+  - cd .. ; codecov
