--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,6 @@ install:
   - cmd: conda devenv
   - cmd: activate gibbs-py36
 test_script:
-  - cmd: pytest
+  - cmd: pytest -n auto
   - cmd: cd notebooks
   - cmd: pytest --nbval
