--- a/.azure-templates/win.yml
+++ b/.azure-templates/win.yml
@@ -1,9 +1,9 @@
 jobs:
 - job:
-  displayName: Windows vs2017
+  displayName: Windows vs2015
 
   pool:
-    vmImage: 'vs2017-win2016'
+    vmImage: 'vs2015-win2012r2'
   strategy:
     matrix:
       Python36:
