--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - export CONDA=$CONDA_BIN/conda
   - $CONDA config --system --set always_yes yes --set changeps1 false
   - $CONDA config --system --append channels conda-forge
-  - $CONDA install -n base conda-devenv
+  - $CONDA install -n base conda-devenv conda=4.6.14
 
 install:
   - $CONDA devenv
