--- a/.azure-templates/osx.yml
+++ b/.azure-templates/osx.yml
@@ -23,7 +23,7 @@ jobs:
   - script: |
       conda config --system --set always_yes yes --set changeps1 no
       conda config --system --append channels conda-forge
-      conda install -n base conda-devenv
+      conda install -n base conda-devenv conda=4.6.14
     displayName: 'Configuring conda'
 
   - script: |
@@ -32,7 +32,7 @@ jobs:
 
   - script: |
       source activate gibbs-py$(py_version)
-      pytest -n auto --cov-config=.coveragerc --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html --cov=gibbs
+      pytest --cov-config=.coveragerc --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html --cov=gibbs
       cd notebooks
       pytest --nbval
     displayName: 'Tests'
