--- a/.azure-templates/win.yml
+++ b/.azure-templates/win.yml
@@ -21,7 +21,7 @@ jobs:
   - script: |
       conda config --system --set always_yes yes --set changeps1 no
       conda config --system --append channels conda-forge
-      conda install -n base conda-devenv
+      conda install -n base conda-devenv conda=4.6.14
     displayName: 'Configuring conda'
 
   - script: |
