--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ env:
 
 os:
   - linux
-  - osx
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then OS=Linux-x86_64; else OS=MacOSX-x86_64; fi
@@ -32,7 +31,7 @@ install:
   - source $CONDA_BIN/activate gibbs-py$PY_VERSION
 
 script:
-  - pytest --cov-config=.coveragerc --cov-report xml --cov=gibbs
+  - pytest -n auto --cov-config=.coveragerc --cov-report xml --cov=gibbs
   - cd $GIBBS_NOTEBOOKS_DIR; pytest --nbval
 
 after_script:
