--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - export CONDA=$CONDA_BIN/conda
   - $CONDA config --system --set always_yes yes --set changeps1 false
   - $CONDA config --system --append channels conda-forge
-  - $CONDA install -n base conda-devenv conda
+  - $CONDA install -n base conda-devenv
 
 install:
   - $CONDA devenv
