--- a/environment.devenv.yml
+++ b/environment.devenv.yml
@@ -2,6 +2,16 @@
 name: gibbs-py{{ CONDA_PY }}
 
 dependencies:
+  # Cpp stack
+  - clangdev >=6.0
+  - cmake < 3.15
+  - make
+  - eigen
+
+  # For the bindings
+  - pybind11
+
+  # Python stack
   - python=3.6
   - attrs
   - numpy
