--- a/environment.yml
+++ b/environment.yml
@@ -2,16 +2,21 @@
 dependencies:
 - altair
 - attrs
+- clangdev >=6.0
+- cmake < 3.15
 - codecov
+- eigen
 - git
 - hypothesis
 - jupyter
 - jupyter_contrib_nbextensions
 - jupyter_nbextensions_configurator
+- make
 - matplotlib
 - nbval
 - numpy
 - pandas
+- pybind11
 - pygmo
 - pylint
 - pytest
