Some changes to incorporate cpp implementations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(eos LANGUAGES CXX C)
 set(CMAKE_CXX_STANDARD 17)
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 add_compile_options("-fPIC")  # Necessary for the linking
 
 set(conda_env_path $ENV{HOME}/miniconda3/envs/gibbs-py36)
