--- a/environment.yml
+++ b/environment.yml
@@ -2,9 +2,11 @@
 dependencies:
 - altair
 - attrs
+- binutils
 - clangdev >=6.0
 - cmake < 3.15
 - codecov
+- compilers
 - eigen
 - git
 - hypothesis
