--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_install:
 install:
   - $CONDA devenv
   - source $CONDA_BIN/activate gibbs-py$PY_VERSION
+  - mkdir build ; cd build ; cmake ../ ; cmake --build . --target install --config Release
 
 script:
   - pytest -n auto --cov-config=.coveragerc --cov-report xml --cov=gibbs
