Update CI build and install scripts

--- a/.azure-templates/win.yml
+++ b/.azure-templates/win.yml
@@ -30,6 +30,10 @@ jobs:
     displayName: 'Running conda devenv'
 
   - script: |
+      mkdir build ; cd build ; cmake ../ ; cmake --build . --target install --config Release
+    displayName: 'Build and Install'
+
+  - script: |
       call activate gibbs-py$(py_version)
       pytest -n auto --cov-config=.coveragerc --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html --cov=gibbs
       cd notebooks
