--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
   - mkdir build ; cd build ; cmake ../ ; cmake --build . --target install --config Release
 
 script:
-  - pytest --cov-config=.coveragerc --cov-report xml --cov=gibbs
+  - pytest . --cov-config=.coveragerc --cov-report xml --cov=gibbs
   - cd $GIBBS_NOTEBOOKS_DIR; pytest --nbval
 
 after_script:
