--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,8 @@ install:
   - mkdir build ; cd build ; cmake ../ ; cmake --build . --target install --config Release
 
 script:
+  - pwd
+  - ls
   - pytest --cov-config=.coveragerc --cov-report xml --cov=gibbs tests/
   - cd $GIBBS_NOTEBOOKS_DIR; pytest --nbval
 
