--- a/.azure-templates/osx.yml
+++ b/.azure-templates/osx.yml
@@ -31,7 +31,7 @@ jobs:
     displayName: 'Running conda devenv'
 
   - script: |
-      mkdir build ; cd build ; cmake ../ ; cmake --build . --target install --config Release
+      mkdir build ; cd build ; cmake ../ ; cmake --build . --target install --config Release; cd ..
     displayName: 'Build and Install'
 
   - script: |
